--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "deploy": "npm run build && npm run export && gh-pages -d out"
   },
+ 
   "dependencies": {
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
@@ -30,4 +32,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+  
 }
